# openat

./: .dockerignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  README_CN.md  TEST_PLAN.md  TODO.md  count_lines.sh  docker-compose.yml
examples/: test_search.rs
src/: agent.rs  bus.rs  cli.rs  cron.rs  main.rs  providers.rs  session.rs
src/agent/: memory.rs  skills.rs
src/agent/tools/: mod.rs
src/channels/: common.rs  discord.rs  feishu.rs  mod.rs  qq.rs  telegram.rs  whatsapp.rs
src/channels/qq/: mod.rs
src/channels/telegram/: mod.rs
src/channels/whatsapp/: mod.rs
src/cli/: errors.rs  mod.rs
src/cli/commands/: agent.rs  channel.rs  cron.rs  discord_test.rs  gateway.rs  mod.rs
src/config/: mod.rs
src/core/: mod.rs
src/core/agent/: context.rs  executor.rs  memory.rs  mod.rs  simple.rs  skills.rs  subagent.rs
src/core/bus/: mod.rs
src/core/scheduler/: mod.rs
src/core/session/: mod.rs
src/heartbeat/: mod.rs
src/llm/: mod.rs
src/llm/providers/: anthropic.rs  deepseek.rs  gemini.rs  groq.rs  litellm.rs  minimax.rs  mod.rs  moonshot.rs  openai.rs  openai_compat.rs  openrouter.rs  transcription.rs  vllm.rs  zhipu.rs
src/tools/: cron_tool.rs  fetch.rs  filesystem.rs  html.rs  macros.rs  message.rs  mod.rs  shell.rs  spawn.rs  web_search.rs
src/types/: mod.rs
