[package]
name = "nanobot"
version = "0.1.0"
edition = "2024"
description = "Ultra-Lightweight Personal AI Assistant"
authors = ["nanobot developers"]

[dependencies]
tokio = { version = "1.40", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.11", features = ["v4"] }
dirs = "5"
shellexpand = "3"
async-trait = "0.1"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
url = "2.5"
teloxide = { version = "0.13", features = ["full"] }
cron = "0.12"
futures-util = "0.3"
urlencoding = "2.1"

[profile.release]
opt-level = 3
